force-app/main/default/objects/Warehouse__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <label>Data Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>