force-app/main/default/objects/Warehouse__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Warehouse description - Can be used in the Delivery address description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>