force-app/main/default/objects/Warehouse__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Organization__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Offices</valueSetName>
    </valueSet>
</CustomField>