force-app/main/default/objects/Warehouse__c/fields/Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Owned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates which Company Owns the Warehouse</description>
    <inlineHelpText>Indicates which Company Owns the Warehouse</inlineHelpText>
    <label>Owned By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warehouses</relationshipLabel>
    <relationshipName>Warehouses</relationshipName>
    <type>Lookup</type>
</CustomField>