force-app/main/default/objects/Warehouse__c/fields/Warehouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Address__c</fullName>
    <label>Warehouse Address</label>
    <type>Address</type>
</CustomField>