force-app/main/default/objects/Warehouse__c/fields/WarehouseAddress__c.field-meta.xml
<CustomField>
    <fullName>WarehouseAddress__c</fullName>
    <label>Warehouse Address</label>
    <type>Address</type>
</CustomField>