force-app/main/default/objects/Warehouse__c/fields/WarehouseCode__c.field-meta.xml
<CustomField>
    <fullName>WarehouseCode__c</fullName>
    <description>Location Code (Unique Id for ERP)</description>
    <externalId>true</externalId>
    <inlineHelpText>Location Code (Unique Id for ERP)</inlineHelpText>
    <label>Warehouse Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>