force-app/main/default/objects/Warehouse__c/fields/WarehouseId__c.field-meta.xml
<CustomField>
    <fullName>WarehouseId__c</fullName>
    <description>Short Name (Unique Id)</description>
    <externalId>true</externalId>
    <inlineHelpText>Short Name (Unique Id)</inlineHelpText>
    <label>Warehouse Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>