force-app/main/default/objects/Warehouse__c/fields/WarehouseLocation__c.field-meta.xml
<CustomField>
    <fullName>WarehouseLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Warehouses</relationshipLabel>
    <relationshipName>LumonWarehouses</relationshipName>
    <type>Lookup</type>
</CustomField>