force-app/main/default/objects/Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WarehouseCode__c</columns>
    <columns>WarehouseId__c</columns>
    <columns>Organization__c</columns>
    <columns>Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>